# mccLib

./: .gitignore  LICENSE  README.md  build.sh  install.sh  setup.cfg  test.py
lib/: chord.py
mcc/: chord.py  grid.py  key.py  note.py  tone.py  tools.py
src/: Blue drag.mcc
src/mcclib/: Chord.py  Chords.py  Grid.py  Harmony.py  Key.py  Keys.py  Literals.py  Note.py  Notes.py  Scale.py  Scales.py  Signature.py  Signatures.py  Tools.py  __init__.py  literals.py  mccFile.py  mccFiles.py
test/other/: A little love, a little kiss.mcc  Ain't Misbehavin'.mcc
test/src/: After you've gone (G).mcc  Ain't Misbehavin'.mcc  Blue drag.mcc
