[metadata]
name = mcclib
version = 0.0.1
author = Simon Daron
author_email = simon@surlaterre.org
description = A package to manipulate musical chord charts, chords, keys, ...
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/luthierio/mccLib
project_urls =
    Bug Tracker = https://github.com/luthierio/mccLib/-/issues
    repository = https://github.com/luthierio/mccLib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
install_requires =
    PyYAML
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src


